--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -118,7 +118,7 @@
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:layout_marginStart="31dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="33dp"
         android:background="@android:color/holo_orange_light"
         android:text="@string/btn_chat_search"
@@ -243,6 +243,7 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="0dp"
         android:layout_height="59dp"
+        android:background="@color/design_default_color_background"
         app:itemBackground="@color/design_default_color_background"
         app:itemIconTint="@color/design_default_color_error"
         app:itemTextColor="@color/design_default_color_error"
