--- a/app/src/main/res/drawable/list_foreground.xml
+++ b/app/src/main/res/drawable/list_foreground.xml
@@ -4,12 +4,12 @@
     android:viewportWidth="108"
     android:viewportHeight="108"
     android:tint="#3A84E4">
-  <group android:scaleX="3.0276"
-      android:scaleY="3.0276"
-      android:translateX="17.6688"
-      android:translateY="17.6688">
+  <group android:scaleX="2.1402"
+      android:scaleY="2.1402"
+      android:translateX="28.3176"
+      android:translateY="28.3176">
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+        android:pathData="M14,10H2v2h12V10zM14,6H2v2h12V6zM2,16h8v-2H2V16zM21.5,11.5L23,13l-6.99,7l-4.51,-4.5L13,14l3.01,3L21.5,11.5z"/>
   </group>
 </vector>
